NXP-31182: Update Chronicle to support Java 17